--- a/src/index.css
+++ b/src/index.css
@@ -778,6 +778,38 @@ svg.dropdown__icon path{
   gap:12px;
 }
 
+/*cards*/
+
+.card__container{
+  position:relative;
+  width:100%;
+}
+
+.card__image{
+  width: 100%;
+  border-radius:4px;
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  -ms-border-radius:4px;
+  -o-border-radius:4px;
+}
+
+.card__checkbox{
+  position: absolute;
+  right: calc(1 * var(--vh));
+  top: calc(1 * var(--vh));
+  transform: scale(1.15);
+  -webkit-transform: scale(1.15);
+  -moz-transform: scale(1.15);
+  -ms-transform: scale(1.15);
+  -o-transform: scale(1.15);
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  -ms-border-radius: 4px;
+  -o-border-radius: 4px;
+}
+
 .card__thumbnail--container{
     border-radius: 4px;
     -webkit-border-radius: 4px;
