--- a/src/index.css
+++ b/src/index.css
@@ -884,7 +884,7 @@ svg.dropdown__icon path {
 }
 
 .loader__card--container {
-	background-color: #dedede;
+	background-color: #ffffff;
 	width: 100%;
 	height: 500px;
 }
