--- a/src/components/SocialButton.css
+++ b/src/components/SocialButton.css
@@ -1,90 +1,67 @@
-.btn__social{
-    display: flex;
-    justify-content:flex-start;
-    align-items:center;
-    width:100%;
-    height:12vw;
-    font-size: calc(.27548vw + 12.71074px);
-    font-family: Helvetica,sans-serif;
-    font-weight: 500;
-    -webkit-font-smoothing: antialiased;
-    color: #fff;
-    cursor: pointer;
-    font-size: calc(.27548vw + 12.71074px);
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: background-color .3s,border-color .3s;
-    padding:0 1rem;
+.google__icon + .btn__social--text {
+	color: var(--grey);
 }
 
-.btn__social--text{
-    width:100%;
-    font-weight: 600;
-    font-size: 4vw;
-    text-align:center;
+@media screen and (min-width: 640px) {
+	.icons {
+		font-size: 6vw;
+	}
+
+	.btn__social {
+		width: 8vw;
+		height: 8vw;
+	}
+
+	.facebook__icon,
+	.twitter__icon {
+		font-size: 4vw;
+	}
 }
 
-.google__icon + .btn__social--text{
-    color: var(--grey)
+@media screen and (min-width: 920px) {
+	.icons {
+		font-size: 4vw;
+	}
+
+	.btn__social {
+		width: 6vw;
+		height: 6vw;
+	}
+
+	.facebook__icon,
+	.twitter__icon {
+		font-size: 2vw;
+	}
 }
 
-@media screen and (min-width: 640px){
-    .icons{
-        font-size: 6vw;
-    }
+@media screen and (min-width: 1240px) {
+	.icons {
+		font-size: 2vw;
+	}
 
-    .btn__social{
-        width:8vw;
-        height:8vw;
-    }
+	.btn__social {
+		width: 4vw;
+		height: 4vw;
+	}
 
-    .facebook__icon,.twitter__icon{
-        font-size:4vw;
-    }
+	.facebook__icon,
+	.twitter__icon {
+		font-size: 1.75vw;
+	}
 }
 
-@media screen and (min-width: 920px){
-    .icons{
-        font-size: 4vw;
-    }
+@media screen and (min-width: 1620px) {
+	.icons {
+		font-size: 1.75vw;
+	}
 
-    .btn__social{
-        width:6vw;
-        height:6vw;
-    }
+	.btn__social {
+		width: 3vw;
+		height: 3vw;
+	}
 
-    .facebook__icon,.twitter__icon{
-        font-size:2vw;
-    }
-}
-
-@media screen and (min-width: 1240px){
-    .icons{
-        font-size: 2vw;
-    }
-
-    .btn__social{
-        width:4vw;
-        height:4vw;
-    }
-
-    .facebook__icon,.twitter__icon{
-        font-size:1.75vw;
-    }
-}
-
-
-@media screen and (min-width: 1620px){
-    .icons{
-        font-size: 1.75vw;
-    }
-
-    .btn__social{
-        width:3vw;
-        height:3vw;
-    }
-
-    .facebook__icon,.twitter__icon{
-        font-size:1.5vw;
-    }
+	.facebook__icon,
+	.twitter__icon {
+		font-size: 1.5vw;
+	}
 }
