--- a/src/index.css
+++ b/src/index.css
@@ -234,6 +234,8 @@ input.toolbar__icon:focus {
 	min-height: 100%;
 	background-position: center;
 	background-size: cover;
+	justify-content: flex-end;
+	padding: 0 0 30% 0;
 }
 
 .decks.page {
