--- a/src/index.css
+++ b/src/index.css
@@ -128,6 +128,17 @@ code {
 	font-size: 3vh;
 }
 
+.navbar{
+	width: 100%;
+	padding: .5rem 1rem;
+	background-color: #222222;
+	color:#ffffff;
+}
+
+.navbar .menu{
+	display: flex;
+}
+
 .footer {
 	display: flex;
 	align-items: flex-start;
