--- a/src/index.css
+++ b/src/index.css
@@ -129,6 +129,10 @@ code {
 }
 
 .navbar{
+	position:fixed;
+	bottom:0;
+	left:0;
+	right:0;
 	width: 100%;
 	padding: .5rem 1rem;
 	background-color: #222222;
