--- a/src/index.css
+++ b/src/index.css
@@ -133,9 +133,12 @@ code {
 	bottom:0;
 	left:0;
 	right:0;
-	width: 100%;
 	padding: .5rem 1rem;
 	background-color: #222222;
+}
+
+.navbar .icon {
+	font-size: 3vh;
 }
 
 .navbar svg.icon path{
