--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
 html {
 	color: var(--white);
 	height: -webkit-fill-available;
+	background-color: #222222;
 }
 
 html,
@@ -135,6 +136,7 @@ code {
 	right:0;
 	padding: 1.5vh 1.25rem;
 	background-color: #222222;
+	border-top: 1px solid white;
 }
 
 .navbar .icon {
