--- a/src/index.css
+++ b/src/index.css
@@ -155,6 +155,12 @@ code {
 	justify-content: space-between;
 }
 
+.nabar .menu__element{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 .nabar .menu__element .menu__link{
 	display: flex;
 	align-items: center;
