change decks page style

--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,13 @@ code {
 		monospace;
 }
 
+.heading{
+	position: fixed;
+	top: 0;
+	left:0;
+	right: 0;
+}
+
 /*Components*/
 .header {
 	position: fixed;
