--- a/src/pages/DecksPage.css
+++ b/src/pages/DecksPage.css
@@ -6,7 +6,7 @@
 .decks .heading{
     display: flex;
     justify-content: space-between;
-    padding:0 2vh;
+    padding:2vh 0;
 }
 
 .decks .heading .heading__logo{
