--- a/src/pages/DecksPage.css
+++ b/src/pages/DecksPage.css
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     padding:2vh 0;
+    color: white;
 }
 
 .decks .heading .heading__logo{
