--- a/src/pages/DecksPage.css
+++ b/src/pages/DecksPage.css
@@ -10,6 +10,10 @@
     color: white;
 }
 
+.decks .heading__pseudo{
+    font-size: 2.5vh;
+}
+
 .decks .heading .heading__logo{
     height: 10vh;
 }
