--- a/src/pages/DecksPage.css
+++ b/src/pages/DecksPage.css
@@ -6,7 +6,7 @@
 .decks .heading{
     display: flex;
     justify-content: space-between;
-    padding:2vh 2vh;
+    padding:2vh 1.25rem;
     color: white;
 }
 
