--- a/src/pages/DecksPage.css
+++ b/src/pages/DecksPage.css
@@ -15,7 +15,8 @@
 {
     display:flex;
     align-items: center;
-    font-size: 2.5vh;
+    width:35%;
+    font-size: 1.5rem;
 }
 
 .decks .heading .heading__logo{
