--- a/src/pages/DecksPage.css
+++ b/src/pages/DecksPage.css
@@ -16,7 +16,7 @@
     display:flex;
     align-items: center;
     width:35%;
-    font-size: 1.5rem;
+    font-size: .75rem;
 }
 
 .decks .heading .heading__logo{
