change decks page style

--- a/src/pages/DecksPage.css
+++ b/src/pages/DecksPage.css
@@ -10,8 +10,7 @@
     color: white;
 }
 
-.decks .heading .heading__pseudo,
-.decks .heading .heading__counter
+.decks .heading > *
 {
     display:flex;
     align-items: center;
