--- a/src/pages/DecksPage.css
+++ b/src/pages/DecksPage.css
@@ -15,7 +15,7 @@
     display:flex;
     align-items: center;
     width:35%;
-    font-size: .75rem;
+    font-size: 2vh;
     font-weight: 700;
 }
 
@@ -25,4 +25,5 @@
 
 .decks .heading .heading__logo{
     height: 10vh;
+    width:10vh;
 }
