--- a/src/pages/DecksPage.css
+++ b/src/pages/DecksPage.css
@@ -4,19 +4,11 @@
 
 .decks .heading{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     width:100%;
     color: white;
 }
 
-.decks .heading > *
-{
-    display:flex;
-    align-items: center;
-    width:35%;
-    font-size: 2vh;
-    font-weight: 700;
-}
 
 .decks .heading .heading__counter{
     justify-content: flex-end;
