--- a/src/index.css
+++ b/src/index.css
@@ -937,6 +937,9 @@ svg.dropdown__icon path {
 /* Utilities */
 
 .container{
+	display:flex;
+	justify-content: space-between;
+	align-items: center;
 	margin: 0 auto;
 	max-width: 90%;
 }
