--- a/src/index.css
+++ b/src/index.css
@@ -941,7 +941,7 @@ svg.dropdown__icon path {
 	justify-content: space-between;
 	align-items: center;
 	margin: 0 auto;
-	max-width: 90%;
+	width:90%;
 }
 
 .rounded {
