--- a/src/pages/DecksPage.css
+++ b/src/pages/DecksPage.css
@@ -15,12 +15,12 @@
     width:35%;
 }
 
-.decks .heading__counter{
-    text-align: right;
+.decks .heading__pseudo{
+    text-align: left;
 }
 
 .decks .heading__counter{
-    text-align: left;
+    text-align: right;
 }
 
 .decks .heading__logo{
