add modify infos

--- a/src/components/createDeckForm/createDeckForm.css
+++ b/src/components/createDeckForm/createDeckForm.css
@@ -16,7 +16,7 @@
 .create__deck--title{
     text-transform: uppercase;
     font-weight: 400;
-    font-size: 1.75rem;
+    font-size: 3.5vh;
     letter-spacing:1px;
 }
 
