--- a/src/components/popup/style.css
+++ b/src/components/popup/style.css
@@ -4,12 +4,14 @@
     align-content: space-around;
     flex-wrap: wrap;
     width: 90vw;
-    height: 30vh;
+    min-height: 10rem;
+    height: 28vh;
     background-color: #404040;
 }
 
 .popup__title{
     font-weight: 400;
+    font-size: 2vh;
 }
 
 .popup__text{
@@ -18,9 +20,9 @@
 }
 
 .popup__title,
+.popup__text,
 .popup__group{
     width: 100%;
-    width:80%;
 }
 
 .popup__group{
@@ -65,4 +67,24 @@
 
 .popup__button:active:hover{
     background-color: #606060;
+}
+
+
+.popup__input--field{
+    margin: 0;
+    padding: 1vh 1vw;
+    width: 68%;
+    color: #fff;
+    background-color: transparent;
+    border-bottom: 1px solid #cdcdcd;
+    text-align: center;
+    border-radius: 0;
+    font-size: 1.125rem;
+    font-weight: 300;
+    letter-spacing: 2px;
+    font-family: "oswald";
+}
+
+.popup__input--field:focus{
+    color: white;
 }
