--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 :root {
 	--error: #ff5d5d;
-	--done: #3be73b;
+	--success: #3be73b;
 	--black: #101010;
 	--dark-grey: #202020;
 	--grey: #404040;
@@ -51,6 +51,12 @@ section {
     -ms-user-select: none;
     user-select: none;
 	-webkit-tap-highlight-color: transparent;
+}
+
+svg path,
+svg.icon,
+svg.icon path{
+	pointer-events: none;
 }
 
 html,
