--- a/src/components/popup/style.css
+++ b/src/components/popup/style.css
@@ -5,8 +5,8 @@
     flex-wrap: wrap;
     width: 90vw;
     min-height: 10rem;
-    height: 28vh;
     background-color: #404040;
+    padding: 4vh 0;
 }
 
 .popup__title{
@@ -85,6 +85,22 @@
     font-family: "oswald";
 }
 
+.popup__input--radio{
+    margin-bottom: -10px;
+}
+
 .popup__input--field:focus{
     color: white;
 }
+
+.popup__radio--group{
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+}
+
+.popup__label{
+    display:flex;
+    align-items: center;
+}
+
