--- a/src/pages/deckPage/deckPage.css
+++ b/src/pages/deckPage/deckPage.css
@@ -7,6 +7,12 @@
 
 .page__deck .list__container{
     width: 90%;
+    overflow-y: scroll;
+    padding: 2vh 0;
+}
+
+.page__deck .list{
+    height: 110%;
 }
 
 
