--- a/src/pages/cardsType/style.css
+++ b/src/pages/cardsType/style.css
@@ -41,7 +41,21 @@
 }
 
 .cards__list--item{
-    width: 46%;
+    height: 50vw;
+    max-height: 250px;
+    width: 37,5vw;
+    max-width: 188px; 
+    margin-bottom: 3%;
+    margin-right: 4%;
+    box-shadow: 0 0px 6px 0px #050505;
+    border-radius: 6px;
+}
+
+.cards__list--item.divinity{
+    height: 30vw;
+    max-height: 150px;
+    width: 40vw;
+    max-width: 200px;
     margin-bottom: 3%;
     margin-right: 4%;
     box-shadow: 0 0px 6px 0px #050505;
@@ -75,4 +89,11 @@
     width: 100%;
     height: 20%;
     background-color: #202020;
+}
+
+.list__loader{
+    text-align: center;
+    width: 100%;
+    height:40px;
+    align-self: end;
 }
