--- a/src/pages/cardsType/style.css
+++ b/src/pages/cardsType/style.css
@@ -3,6 +3,7 @@
     margin: 4vh auto 0 auto;
     box-shadow: 0 0 12px 2px #050505;
     height: calc(100% - var(--navbar-height) - 8vh);
+    align-content: flex-start;
 }
 
 .card__type .form {
