--- a/src/pages/cardsType/style.css
+++ b/src/pages/cardsType/style.css
@@ -4,38 +4,83 @@
     box-shadow: 0 0 12px 2px #050505;
     height: calc(100% - var(--navbar-height) - 8vh);
     align-content: flex-start;
+    overflow-y: hidden;
 }
 
+/* Start transition */
 .card__type .form {
+    display: flex;
+    align-items: center;
+    flex-wrap:wrap;
     background-color: #505050;
+    padding:3vh;
+    min-height: 12vh;
+    max-height: 100vh;
+    transition: height .500s ease;
 }
 
-.options__list{
+.card__type .form > *{
+    opacity:1;
+    transition: opacity .200s ease .300s;
+}
+
+.card__type .form.close{
+    height: 12vh;
+    overflow-y: hidden;
+    transition: height .500s ease;
+}
+
+.card__type .form.close > *:not(:first-child){
+    opacity: 0;
+    transition: opacity .100s ease;
+}
+
+.card__type .form.close + *{
+    max-height:100vh;
+    height: 71vh;
+    min-height:1vh;
+    transition: height .500s ease;
+}
+
+.card__type .form + *{
+    min-height: 1vh;
+    height: 100%;
+    transition: height .500s ease;
+}
+
+.card__type .btn{
+    margin:0 auto;
+    width: 40%;
+}
+
+/* end transition */
+
+.card__type .options__list{
     width: 100%;
     padding: 2vh 4vw;
     background-color: #404040;
     border-bottom: 1px solid white;
 }
 
-.form .kingdoms__list{
+.card__type .form .kingdoms__list{
     display: flex;
     justify-content: space-between;
     width:100%;
 }
 
-.options__item--title{
+.card__type .options__item--title{
     text-transform: uppercase;
     margin-bottom: 1vh;
     font-weight: 400;
     font-size: 2.25vh;
 }
 
-.kingdom__img{
+.card__type .kingdom__img{
     height: 2.25rem;
     cursor:pointer;
 }
 
-.cards__list{
+.card__type .cards__list{
     display:flex;
     justify-content: space-around;
     align-content: flex-start;
@@ -46,7 +91,7 @@
     overflow-y: scroll;
 }
 
-.cards__list--item{
+.card__type .cards__list--item{
     height: 50vw;
     max-height: 250px;
     width: 36vw;
@@ -57,7 +102,7 @@
     border-radius: 4px;
 }
 
-.cards__list--item.divinity{
+.card__type .cards__list--item.divinity{
     height: 30vw;
     max-height: 150px;
     width: 40vw;
@@ -68,11 +113,11 @@
     border-radius: 6px;
 }
 
-.cards__list--item:nth-child(2n){
+.card__type .cards__list--item:nth-child(2n){
     margin-right: 0;
 }
 
-.card__img{
+.card__type .card__img{
     width: 100%;
     height:100%;
     border-radius: 4px;
@@ -81,17 +126,16 @@
 }
 
 
-.cards__container{
+.card__type .cards__container{
     display: flex;
     flex-wrap: wrap;
-    height: 51%;
     width: 100%;
-    margin-top: 1rem;
-    padding-bottom: 1rem;
+    margin-top: 2vh;
+    padding-bottom: 3vh;
     background-color:  #202020;
 }
 
-.btn__banner{
+.card__type .btn__banner{
     display: flex;
     align-items: center;
     justify-content: center;
