--- a/src/components/deck/Deck.css
+++ b/src/components/deck/Deck.css
@@ -10,17 +10,18 @@
 }
 
 .deck__body .icon{
-    width: 8vh;
-    height: 6vh;
+    width: 7vh;
+    height: 80%;
 }
 
 .deck__body{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: .5rem .75rem;
     border-radius: 0 0 7px 7px;
     color: white;
-    height: auto;
+    height: 40%;
 }
 
 .deck__name{
@@ -55,7 +56,7 @@
 }
 
 .deck__heading{
-    height: 100%;
+    height: 60%;
     display: flex;
     align-items: center;
     justify-content: center;
