--- a/src/components/dropdown/dropdown.css
+++ b/src/components/dropdown/dropdown.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     width:70%;
     border-bottom: 1px solid #ababab;
+    height: 30px;
 }
 
 .dropdown__header{
@@ -21,7 +22,7 @@
 .dropdown__icon{
     display: flex;
     align-items: center;
-    height:100%;
+    height: 80%;
     cursor:pointer;
 }
 
@@ -37,14 +38,13 @@
 }
 
 .dropdown__content{
-    position:absolute;
-    top: calc(100% + .5rem);
     pointer-events: none;
     width:100%;
     background-color: #505050;
     box-shadow: 0 0 4px #303030;
     opacity:0;
     transition: opacity .2s ease;
+    z-index: 20;
 }
 
 .dropdown__content.open{
