--- a/src/pages/profilePage/ProfilePage.css
+++ b/src/pages/profilePage/ProfilePage.css
@@ -13,19 +13,37 @@
     margin-bottom:10vh;
 }
 
-.profile__page img.avatar{
-    border-radius: 50%;
-}
-
-.profile__page .avatar{
+.profile__page .avatar__block{
     width: 20vh;
     height: 20vh;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
-.profile__page .avatar svg{
-    stroke-width: 2;
+.profile__page .loader__block{
+    background-color: transparent;
+}
+
+.profile__page .loader__block .loader {
+    width:60px;
+    height:60px;
+}
+
+.profile__page .form__label .loader__block,
+.profile__page .avatar__block .form__label,
+.profile__page .avatar,
+.profile__page .avatar .default{
     width:100%;
     height:100%;
+}
+
+.profile__page .avatar__block .form__label{
+    margin-bottom: 1rem;
+    cursor: pointer;
+}
+
+.profile__page .avatar .default path{
+    stroke-width: 1;
 }
 
 .profile__page .user__id{
