--- a/src/index.css
+++ b/src/index.css
@@ -65,8 +65,8 @@ body,
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
-	min-height: 100vh;
-	height: 100vh;
+	height:100vh;
+	min-height: 100%;
 }
 
 body {
@@ -76,7 +76,6 @@ body {
 	font-display: swap;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	width: 100vw;
 	min-height: -webkit-fill-available;
 	background-color: var(--white);
 	overflow-y: scroll;
