--- a/src/pages/gamersPage/gamerspage.css
+++ b/src/pages/gamersPage/gamerspage.css
@@ -36,6 +36,7 @@
 .gamers__page .gamers__list{
     display: flex;
     flex-wrap:wrap;
+    justify-content: space-between;
     width: 90%;
     height: calc(100vh - var(--navbar-height) - var(--header-height) - 6.5vh);
     padding: .5rem 0 0 0;
@@ -46,8 +47,20 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 33%;
+    width: 24%;
+    margin-right: 1rem;
     margin-bottom: 1rem;
+    cursor: pointer;
+}
+
+.gamers__page .gamers__list .gamers__list--item:nth-child(3n){
+    margin-right:0;
+}
+
+.gamers__page .member__avatar,
+.gamers__page .member__avatar .default,
+.gamers__page .member__text{
+    pointer-events: none;
 }
 
 .gamers__page .member__avatar{
@@ -57,6 +70,10 @@
     box-shadow: 0 0 8px black;
     margin-bottom:.5rem;
     line-height: 5.5rem;
+}
+
+.gamers__page .loader__box{
+    width:100%;
 }
 
 .gamers__page .member__avatar .default{
