--- a/src/pages/gamersPage/gamerspage.css
+++ b/src/pages/gamersPage/gamerspage.css
@@ -3,7 +3,7 @@
 }
 
 .gamers__page .title{
-    font-size: 3vh;
+    font-size: 2.5vh;
     font-weight: 400;
     margin-bottom: 2vh;
 }
@@ -21,8 +21,8 @@
 }
 
 .gamers__page .heading .heading__filter .heading__filter--icon{
-    height: 7vh;
-    margin-top:1.1vh;
+    height: 6vh;
+    margin-top: 1.5vh;
 }
 
 .gamers__page .heading a{
@@ -36,7 +36,7 @@
 .gamers__page .gamers__list{
     display: flex;
     flex-wrap:wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     width: 90%;
     height: calc(100vh - var(--navbar-height) - var(--header-height) - 6.5vh);
     padding: .5rem 0 0 0;
@@ -44,17 +44,17 @@
 }
 
 .gamers__page .gamers__list .gamers__list--item{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 24%;
-    margin-right: 1rem;
+    width:30%;
     margin-bottom: 1rem;
     cursor: pointer;
 }
 
-.gamers__page .gamers__list .gamers__list--item:nth-child(3n){
-    margin-right:0;
+.gamers__page .gamers__list .gamers__list--item .gamers__list--link{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width:100%;
+    height: 100%;
 }
 
 .gamers__page .member__avatar,
@@ -64,8 +64,8 @@
 }
 
 .gamers__page .member__avatar{
-    width: 5.5rem;
-    height: 5.5rem;
+    width: 4.5rem;
+    height: 4.5rem;
     border-radius: 50%;
     box-shadow: 0 0 8px black;
     margin-bottom:.5rem;
@@ -92,7 +92,7 @@
 
 .gamers__page .member__text{
     width: 100%;
-    font-size:.9rem;
+    font-size: 0.75rem;
     font-weight:200;
     letter-spacing: 1px;
     text-shadow: 1px 1px 4px #202020;
