--- a/src/components/popup/style.css
+++ b/src/components/popup/style.css
@@ -15,8 +15,8 @@
 }
 
 .popup__text{
-    font-weight: 300;
-    font-size: 2.5vh;
+    font-weight: 400;
+    font-size: 2vh;
 }
 
 .popup__title,
@@ -31,16 +31,16 @@
 }
 
 .popup__overlay{
-    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
     z-index: 20;
     background-color: rgba(20,20,20,.8);
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .popup__button{
